--- a/.gitignore
+++ b/.gitignore
@@ -2,24 +2,26 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+backend/*.exe
+backend/*.exe~
+backend/*.dll
+backend/*.so
+backend/*.dylib
 
 # Test binary, built with `go test -c`
-*.test
+backend/*.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+backend/*.out
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
 # Go workspace file
-go.work
-go.work.sum
+backend/go.work
+backend/go.work.sum
 
 # env file
-.env
+backend/.env
+
+frontend/node_modules
